--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,52 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+awsebcli==3.20.6
+bcrypt==4.0.1
+blessed==1.20.0
 blinker==1.6.2
+botocore==1.29.99
+cached-property==1.5.2
+cement==2.8.2
 certifi==2023.5.7
-charset-normalizer==3.1.0
+cffi==1.15.1
+charset-normalizer==2.0.12
 click==8.1.3
+colorama==0.4.3
+cryptography==41.0.1
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
 Flask==2.3.2
+Flask-Cors==3.0.10
 frozenlist==1.3.3
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==3.2.0
 MarkupSafe==2.1.3
 multidict==6.0.4
 openai==0.27.8
+paramiko==3.2.0
+pathspec==0.10.1
+pycparser==2.21
+PyNaCl==1.5.0
+pyrsistent==0.19.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-requests==2.31.0
+PyYAML==5.4.1
+requests==2.26.0
+semantic-version==2.8.5
+six==1.14.0
+termcolor==1.1.0
+texttable==1.6.7
 tqdm==4.65.0
-urllib3==2.0.3
+urllib3==1.26.16
+wcwidth==0.1.9
+websocket-client==0.59.0
 Werkzeug==2.3.6
 yarl==1.9.2
 zipp==3.15.0
